--- a/404/404.html
+++ b/404/404.html
@@ -5,13 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oopsie! 404</title>
+
+    <style>
+        .main-content {
+            border-radius: 5px;
+            border-color: gray;
+        }
+        html {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
 <body>
     <div class="main-container">
         <h1>Oh no! The package you were looking for is not found.</h1>
         <p>Try to correct possible spelling errors in the package name or try to find url typos.</p>
         <!-- make a line across the screen -->
-        
+        <p>________________________________________</p>
+        <h2>For technical users:</h2>
+        <p>Error code 7061636B616765206E6F7420666F756E64 (package not found)</p>
+        <p>Try running this command: pk check [package name here]</p>
     </div>
 </body>
 </html>
