--- a/404/404.html
+++ b/404/404.html
@@ -15,9 +15,16 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             background-color: #f5f5f5;
         }
+        emoj {
+            font-size: 100px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
     </style>
 </head>
 <body>
+    <div class="emoji-container">
+        <emoj>😱</emoj>
+    </div>
     <div class="main-container">
         <h1>Oh no! The package you were looking for is not found.</h1>
         <p>Try to correct possible spelling errors in the package name or try to find url typos.</p>
