--- a/404/404.html
+++ b/404/404.html
@@ -31,7 +31,8 @@
         <!-- make a line across the screen -->
         <p>________________________________________</p>
         <h2>For technical users:</h2>
-        <p>Error code 7061636B616765206E6F7420666F756E64 (package not found)</p>
+        <p>XSHC error code 7061636B616765206E6F7420666F756E64 (package not found)</p>
+        <p>HTTP error code 404 (page not found)</p>
         <p>Try running this command: pk check [package name here]</p>
     </div>
 </body>
